# FaceLocker

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  FaaceLocker.pro  Makefile  README.md  comile.sh  docker_build.sh  docker_face_recognition_run.sh  entrypoint.sh  face_finder.h  face_finder_impl.cpp  face_finder_impl.h  face_model.h  face_model_creator.cpp  face_model_creator.h  face_model_impl.cpp  face_model_impl.h  facematcher.cpp  facematcher.h  faceoverlayhandler.cpp  faceoverlayhandler.h  frame_processor.h  interactive_face_selector.cpp  interactive_face_selector.h  key_points_extractor.cpp  key_points_extractor.h  log4cplus.properties  main.cc  main.cpp  model_finder.cpp  model_finder.h  object_finder.h  object_tracker.h  object_tracker_impl.cpp  object_tracker_impl.h  optical_flow_detector.h  optical_flow_detector_impl.cpp  optical_flow_detector_impl.h  (+6 more)
doc/: ArhitectureDescription.md  activity.puml  classes.puml  components.puml
doc/assets/: components_activities.puml  inter_components_activities.md  lifecycle.puml
docker/: Dockerfile  build.sh  run.sh
environment/: Dockerfile  build.sh  run.sh
src/components/: CMakeLists.txt
src/components/common/include/logger/: logger.h
src/components/config/: CMakeLists.txt
src/components/config/impl/include/: config_impl.h
src/components/config/impl/src/: config_impl.cc
src/components/config/include/config/: config.h
src/components/config/test/: CMakeLists.txt  config.ini  config_test.cc
src/components/face_choose/: CMakeLists.txt
src/components/face_choose/include/face_choose/: face_choose_activity.h
src/components/face_choose/include/face_choose/impl/: face_choose_activity_impl.h
src/components/face_choose/src/: face_choose_activity_impl.cc
src/components/face_finder/: CMakeLists.txt
src/components/face_finder/impl/include/: face_finder_impl.h
src/components/face_finder/impl/src/: face_finder_impl.cpp
src/components/face_finder/include/face_finder/: face_finder.h  face_finder_impl.h
src/components/face_finder/include/face_finder/impl/: face_finder_impl.h
src/components/face_finder/src/: face_finder_impl.cpp
src/components/life_cycle/: CMakeLists.txt
src/components/life_cycle/include/life_cycle/: life_cycle.h
src/components/life_cycle/include/life_cycle/impl/: life_cycle_impl.h
src/components/life_cycle/src/: life_cycle_impl.cc
src/components/locker/: CMakeLists.txt
src/components/locker/impl/include/: lock_watch_dog_impl.h  locker_impl.h
src/components/locker/impl/include/private/: locker_private.h
src/components/locker/impl/src/: lock_watch_dog_impl.cc  locker_impl.cpp
src/components/locker/impl/src/private/: locker_private_linux.cc  locker_private_win.cc
src/components/locker/include/locker/: lock_watch_dog.h  locker.h
src/components/locker/include/locker/impl/: lock_watch_dog_impl.h
src/components/locker/include/locker/impl/private/: locker_private.h
src/components/locker/src/: lock_watch_dog_impl.cc  locker_impl.cpp
src/components/locker/src/private/: locker_private_linux.cc  locker_private_win.cc
src/components/user_initialization/: CMakeLists.txt
src/components/user_initialization/include/user_initialization/: user_initializator.h
src/components/user_initialization/incude/: user_initializator.h
src/components/user_interface/: CMakeLists.txt
src/components/user_interface/impl/include/: tray_icon_impl.h
src/components/user_interface/impl/src/: tray_icon_impl.cc
src/components/user_interface/include/user_interface/: tray_icon.h
src/components/utils/: CMakeLists.txt
src/components/utils/common/: CMakeLists.txt
src/components/utils/common/include/utils/common/: notifier.h
src/components/utils/common/include/utils/common/impl/: notifier_impl.h
src/components/utils/common/src/: notifier_impl.cc
src/components/utils/impl/include/: looper_timer.h  notifier_impl.h  timer_impl.h
src/components/utils/impl/src/: looper_timer_impl.cc  notifier_impl.cc  timer_impl.cc
src/components/utils/include/utils/: timer.h
src/components/utils/tests/: CMakeLists.txt  timer_test.cpp
src/components/utils/timer/: CMakeLists.txt
src/components/utils/timer/include/utils/: timer.h
src/components/utils/timer/include/utils/timer/impl/: looper_timer.h  timer_impl.h
src/components/utils/timer/src/: looper_timer_impl.cc  timer_impl.cc
src/components/utils/timer/tests/: CMakeLists.txt  timer_test.cpp
src/components/video_capture/: CMakeLists.txt
src/components/video_capture/include/video_capture/: video_capture.h
src/components/video_capture/include/video_capture/impl/: video_capture_impl.h
src/components/video_capture/incude/: video_capture.h
src/components/video_capture/src/: video_capture_impl.cc
tools/: check_style.sh
